# LIQUID-SQUAD

./: .gitignore  .pre-commit-config.yaml  ALL_ENHANCEMENTS_SUMMARY.md  ARCHITECTURE.md  BUILD_ANALYSIS_REPORT.md  BUILD_ENHANCEMENTS_COMPLETE.md  BUILD_STATUS_SUMMARY.md  BUILD_SYSTEM_README.md  COMPLETE_ENHANCEMENTS_INDEX.md  COMPLETION_REPORT.md  CONTRIBUTING.md  ENHANCEMENTS_COMPLETE.md  ENHANCEMENTS_INDEX.md  ENHANCEMENT_COMPLETION_STATUS.md  EXECUTIVE_SUMMARY.md  FINAL_CLEANUP_COMPLETE.md  FINAL_ENHANCEMENT_REPORT.md  FINAL_FIXES_COMPLETE.md  FINAL_INSTRUCTIONS.md  FIXES_APPLIED.md  FIXES_IMPLEMENTED.md  GUI_ENHANCEMENTS_CHECKLIST.md  GUI_ENHANCEMENT_SUMMARY.md  GUI_MODERNIZATION_COMPLETE.md  GUI_MODERNIZATION_SUMMARY.md  GUI_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATUS.md  PR_INSTRUCTIONS.md  QUICK_FIX_GUIDE.md  QUICK_START_ENHANCED.md  README.md  README_LIQUID_HIVE_25.md  README_LIQUID_HIVE_25_UPDATED.md  START_HERE.md  ci-3.yml  codeql.yml  docker-compose.prod.yml  docker-publish.yml  (+3 more)
.emergent/: emergent.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml
Uploads/: user_message_2025-09-29_22-00-39.txt
full_build_upgraded/.github/workflows/: ci.yml
full_build_upgraded/full_build/: .dockerignore  .env.example  Dockerfile  Dockerfile.optimized  README.md  chat_client.py  conversation_manager.py  export_utils.py  input_validation.py  logging_config.py  pyproject.toml  requirements.txt  response_cache.py  self_loop.py  self_loop_optimized.py  timeout_handler.py
full_build_upgraded/full_build/config/: __init__.py  settings.py  validation.py
full_build_upgraded/full_build/evaluation/: __init__.py  harness.py
full_build_upgraded/full_build/memory_cache/: __init__.py  conversation_graph.py
full_build_upgraded/full_build/ops_security/: __init__.py  observability.py  security.py
full_build_upgraded/full_build/retrieval/: __init__.py  dual_index.py  reranker.py  utils.py
full_build_upgraded/full_build/router/: __init__.py  main.py
full_build_upgraded/full_build/service/: __init__.py  api.py  api_enhanced.py  bootstrap.py
full_build_upgraded/full_build/tests/: test_ask_disabled_retrieval.py  test_auth.py  test_health.py
full_build_upgraded/full_build/verifiers/: __init__.py  code_verifier.py  math_verifier.py  retrieval_verifier.py
full_build_upgraded/gui/: .dockerignore  .env.local.example  Dockerfile.optimized  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
full_build_upgraded/gui/__tests__/: ChatPanel.test.tsx  Sidebar.test.tsx  (+2 more)
github_repos/LIQUID_HIVE_25/: OPERATIONS.md  docker-compose.dev.yml  mock_backend.py
hive_deploy/: docker-compose.yml
monitoring/: prometheus.yml
scripts/: build.sh  deploy.sh  dev.sh  test.sh  validate.sh
(+75 files in other folders)
